--- a/08-intro-to-dom/exercises/js_dom_exercise/index.html
+++ b/08-intro-to-dom/exercises/js_dom_exercise/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>A Few of My Favorite Things</title>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 </head>
 <body>
   <h1>Hello World, Once More</h1>
@@ -15,7 +16,7 @@
 
   <form>
     <input id="new-thing" />
-    <input id="new-thing-button" type="submit" value="Create new thing"></submit>
+    <input id="new-thing-button" type="submit" value="Create new thing">
   </form>
   <script src="main.js" type="text/javascript"></script>
 </body>
