--- a/08-intro-to-dom/scratchpad/index.html
+++ b/08-intro-to-dom/scratchpad/index.html
@@ -2,8 +2,26 @@
 <html>
 <head>
   <title>ScratchPad</title>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
 </head>
 <body>
+  <div id="parent">
+    <button class="button">Button1</button>
+    <button class="button">Button2</button>
+    <button class="button">Button3</button>
+  </div>
+<!-- <form>
+  <input id="my-input" type="text" />
+  <input id="my-input-button" type="submit" value="Run button code">
+</form>
+<div id="parent">
+  <button class="button">Button1</button>
+  <button class="button">Button2</button>
+  <button class="button">Button3</button>
+</div>
+<script src="main.js" type="text/javascript"></script> -->
   <script src="main.js" type="text/javascript"></script>
 </body>
 </html>
+
